--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>D3stinyMC</title>
-</head>
-<body>
+  <head>
+    <title>D3stinyMC</title>
+  </head>
+  <body>
 
-<h1>D3stinyMC</h1>
-<p>Welcome to my webiste!</p>
-
-</body>
+    <h1>D3stinyMC</h1>
+    <p>Welcome to my website!</p>
+    
+  </body>
 </html>
