--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>D3stinyMC</title>
+    <title>D3stinyMC | Home</title>
   </head>
-  <body>
+  <body style="background-color:lightgray;">
 
-    <h1>D3stinyMC</h1>
+    <h1 style="font-family:verda;">D3stinyMC</h1>
     <p>Welcome to my website!</p>
     
   </body>
