--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>D3stinyMC | Home</title>
+    <title>D3stinyMC</title>
   </head>
-  <body style="background-color:lightgray;">
+  <body style="background-color:darkgray;">
 
     <h1 style="font-family:verda;">D3stinyMC</h1>
     <p>Welcome to my website!</p>
