--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body style="background-color:darkgray;">
 
-    <h1 style="font-family:verdana;">D3stinyMC</h1>
+    <h1 style="font-family:verdana;", style="text-align:center;">D3stinyMC</h1>
     <p>Welcome to my website!</p>
     
   </body>
