--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 
     <h1 style="font-family:verdana;text-align:center;color:white;">D3stinyMC</h1>
     <p>Welcome to my website!</p>
+
+    <div align="left">
+
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1234567890123456" crossorigin="anonymous"></script>
+<!-- Homepage Leaderboard -->
+<ins class="adsbygoogle"
+style="display:inline-block;width:728px;height:90px"
+data-ad-client="ca-pub-1234567890123456"
+data-ad-slot="1234567890"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+    </div>
     
   </body>
 </html>
