--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body style="background-color:darkgray;">
 
-    <h1 style="font-family:verda;text-align:center;color:white;">D3stinyMC</h1>
+    <h1 style="font-family:verdana;text-align:center;color:white;">D3stinyMC</h1>
     <p>Welcome to my website!</p>
 
     <div align="left">
@@ -14,7 +14,7 @@
 <!-- Homepage Leaderboard -->
 <ins class="adsbygoogle"
 style="display:inline-block;width:728px;height:90px"
-data-ad-client="ca-pub-1234567890123456"
+data-ad-client="ca-pub-8195913285668646"
 data-ad-slot="1234567890"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
