--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body style="background-color:darkgray;">
 
     <h1 style="font-family:verdana;text-align:center;">D3stinyMC</h1>
-    <p>Welcome to my website!</p>
+    <p style="font-family:verdana;text-align:center;">Welcome to my website!</p>
 
     <div align="left">
 
