--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>D3stinyMC</title>
   </head>
-  <body style="background-color:darkgray;">
+  <body style="background-color:gray;">
 
     <h1 style="font-family:verdana;text-align:center;">D3stinyMC</h1>
     <p style="font-family:verdana;text-align:center;">Welcome to my website!</p>
