--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>D3stinyMC</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body style="background-color:#302E2E;">
 
