--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background-color:#302E2E;">
 
-    <h1 style="font-family:verdana;text-align:center;">D3stinyMC</h1>
+    <img src="logo.png">
     <p style="font-family:verdana;text-align:center;">Welcome to my website!</p>
 
     <div align="left">
