--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+      }
+    </style>
     <title>D3stinyMC</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body style="background-color:#302E2E;">
 
-    <img src="logo.png">
+    <img src="logo.png" class="center">
     <p style="font-family:verdana;text-align:center;">Welcome to my website!</p>
 
     <div align="left">
