--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body style="background-color:#302E2E;">
 
     <img src="logo.png" class="center">
-    <p style="font-family:verdana;text-align:center;">Welcome to my website!</p>
+    <p style="font-family:verdana;text-align:center;color:white;">Welcome to my website!</p>
 
     <div align="left">
 
