--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
     </style>
     <title>D3stinyMC</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body style="background-color:#302E2E;">
 
