--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
       }
     </style>
     <title>D3stinyMC</title>
+     <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body style="background-color:#302E2E;">
+    <form action="" method="POST">
+      <div class="g-recaptcha" data-sitekey="6LcgOyoqAAAAAMrAZckYfO1sn27qFJV4g6uqEZ1f" data-action="LOGIN"></div>
+      <br/>
+      <input type="submit" value="Submit">
 
     <img src="logo.png" class="center">
     <p style="font-family:verdana;text-align:center;color:white;">Welcome to my website!</p>
@@ -23,6 +28,6 @@
      crossorigin="anonymous"></script>
 
     </div>
-    
+    </form>
   </body>
 </html>
