--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       }
     </style>
     <title>D3stinyMC</title>
-    <a href="index.html">Hone</a>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body style="background-color:#302E2E;">
 
     <img src="logo.png" class="center">
     <p style="font-family:verdana;text-align:center;color:white;">Welcome to my website!</p>
+    <a href="index.html">Home</a>
 
     <div align="left">
 
