--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <img src="logo.png" class="center">
     <p style="font-family:verdana;text-align:center;color:white;">Welcome to my website!</p>
-    <a href="index.html">Home</a>
+    <a href="Home"></a>
 
     <div align="left">
 
