--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   </head>
   <body style="background-color:#302E2E;">
 
-    <img src="logo.png" class="center">
+    <img src="logo.png" class="center" style="width:647px;height:103px;">
     <p style="font-family:verdana;text-align:center;color:white;">Welcome to my website!</p>
-    <a href="Home"></a>
 
     <div align="left">
 
