--- a/loading.html
+++ b/loading.html
@@ -3,6 +3,7 @@
   <body>
 
     <h1 style="text-align:center;">Loading Page</h1>
+    <a href="loading.html">LOADING</a>
     <label for="file">Downloading progress:</label>
 <progress id="file" value="32" max="100"> 10% </progress>
     
