--- a/loading.html
+++ b/loading.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <title>LOADING...</title>
 
-    <h1 style="text-align:center;">Loading Page</h1>
+    <h1 style="text-align:center;font-family:verdana;">LOADING</h1>
     <a href="loading.html">LOADING</a>
     <label for="file">Downloading progress:</label>
 <progress id="file" value="32" max="100"> 10% </progress>
