--- a/loading.html
+++ b/loading.html
@@ -5,8 +5,8 @@
 
     <h1 style="text-align:center;font-family:verdana;">LOADING</h1>
     <a href="loading.html">LOADING</a>
-    <label for="file">Downloading progress:</label>
-<progress id="file" value="32" max="100"> 10% </progress>
+    <label for="file"></label>
+<progress id="file" value="100" max="100"> 100% </progress>
     
   </body>
 </html>
