--- a/loading.html
+++ b/loading.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <title>LOADING...</title>
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.buttonload {
+  background-color: #04AA6D; /* Green background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 24px; /* Some padding */
+  font-size: 16px; /* Set a font-size */
+}
 
-    <h1 style="text-align:center;font-family:verdana;">LOADING</h1>
-    <a href="loading.html">LOADING</a>
-    <label for="file"></label>
-<progress id="file" value="0" max="100"> 100% </progress>
-    
-  </body>
+/* Add a right margin to each icon */
+.fa {
+  margin-left: -12px;
+  margin-right: 8px;
+}
+</style>
+</head>
+<body>
+
+<h1 style="text-align:center;">LOADING</h1>
+
+<button class="buttonload">
+  <i class="fa fa-spinner fa-spin"></i>Loading
+</button>
+
+</body>
 </html>
