--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       }
     </style>
     <title>D3stinyMC</title>
+    <a href="index.html">D3stinyMC | HOME</a>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body style="background-color:#302E2E;">
