--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <a href="index.html">HOME</a>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       .center {
@@ -10,7 +11,6 @@
       }
     </style>
     <title>D3stinyMC</title>
-    <a href="index.html">D3stinyMC | HOME</a>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body style="background-color:#302E2E;">
