--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+  <a href="index.html">D3stinyMC | HOME</a>
   <head>
-    <a href="index.html">HOME</a>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       .center {
