--- a/loading.html
+++ b/loading.html
@@ -4,26 +4,29 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-.buttonload { /* Green background */
+.buttonload {
+  background-color: #302E2E; /* Green background */
   border: none; /* Remove borders */
   color: white; /* White text */
-  padding: 12px 24px; /* Some padding */
-  font-size: 16px; /* Set a font-size */
+  padding: 42px 54px; /* Some padding */
+  font-size: 16px;
+  text-align:center;
+  font-family:verdana;
 }
 
-/* Add .a right margin to each icon */
+/* Add a right margin to each icon */
 .fa {
   margin-left: -12px;
   margin-right: 8px;
 }
 </style>
 </head>
-<body style="background-color:>
+<body style="background-color:#302E2E;">
 
-<h1 style="text-align:center;">LOADING</h1>
+<h2>Loading Buttons</h2>
 
 <button class="buttonload">
-  <i class="fa fa-spinner fa-spin"></i>Loading
+  <i class="fa fa-refresh fa-spin"></i>Loading
 </button>
 
 </body>
