--- a/loading.html
+++ b/loading.html
@@ -23,7 +23,7 @@
 </head>
 <body style="background-color:#302E2E;">
 
-<h2>Loading Buttons</h2>
+<h1 style="color:white;">LOADING</h1>
 
 <button class="buttonload">
   <i class="fa fa-refresh fa-spin"></i>Loading
