--- a/loading.html
+++ b/loading.html
@@ -12,6 +12,8 @@
   font-size: 16px;
   text-align:center;
   font-family:verdana;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Add a right margin to each icon */
