--- a/loading.html
+++ b/loading.html
@@ -28,7 +28,7 @@
 <h1 style="color:white;font-family:verdana;text-align:center;">LOADING</h1>
 
 <button class="buttonload">
-  <i class="fa fa-refresh fa-spin"></i>Loading
+  <i class="fa fa-refresh fa-spin"></i>
 </button>
 
 </body>
