--- a/loading.html
+++ b/loading.html
@@ -8,12 +8,11 @@
   background-color: #302E2E; /* Green background */
   border: none; /* Remove borders */
   color: white; /* White text */
-  padding: 42px 54px; /* Some padding */
+  padding: 102px 114px; /* Some padding */
   font-size: 16px;
   text-align:center;
   font-family:verdana;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
 
 /* Add a right margin to each icon */
