--- a/loading.html
+++ b/loading.html
@@ -17,8 +17,8 @@
 
 /* Add a right margin to each icon */
 .fa {
-  margin-left: -12px;
-  margin-right: 8px;
+  margin-left: auto;
+  margin-right: auto;
 }
 </style>
 </head>
