--- a/index.html
+++ b/index.html
@@ -12,3 +12,8 @@
     </form>
   </body>
 </html>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to D3stinyMC</title>
+<meta http-equiv="refresh" content="0; URL=https://d3stinymc.github.io/home">
+<link rel="canonical" href="https://d3stinymc.github.io/home">
