--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <meta charset="utf-8">
   <head>
-    <title>reCAPTCHA demo: Simple page</title>
+    <title>Verify</title>
     <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
   </head>
   <body>
@@ -9,11 +10,10 @@
       <div class="g-recaptcha" data-sitekey="6Lck0isqAAAAAMb866nGwrZZcZWGMNdky2Lhgpnw" data-action="LOGIN"></div>
       <br/>
       <input type="submit" value="Submit">
+      <meta http-equiv="refresh" content="0; URL=https://d3stinymc.github.io/home">
+<link rel="canonical" href="https://d3stinymc.github.io/home">
+    </meta>
+    </meta>
     </form>
   </body>
 </html>
-<!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to D3stinyMC</title>
-<meta http-equiv="refresh" content="0; URL=https://d3stinymc.github.io/home">
-<link rel="canonical" href="https://d3stinymc.github.io/home">
