--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
   </head>
   <body>
-    <form action="" method="POST">
-      <div class="g-recaptcha" data-sitekey="6Lck0isqAAAAAMb866nGwrZZcZWGMNdky2Lhgpnw" data-action="LOGIN"></div>
+    <form id="recaptchaForm" action="#" method="POST" onsubmit="return handleFormSubmit()">
+      <div class="g-recaptcha" data-sitekey="6Lck0isqAAAAAMb866nGwrZZcZWGMNdky2Lhgpnw" data-callback="onRecaptchaSuccess"></div>
       <br/>
       <input type="submit" value="Submit"> 
     </form>
+
+    <script>
+        // Callback function for successful reCAPTCHA
+        function onRecaptchaSuccess() {
+            document.getElementById('recaptchaForm').setAttribute('data-recaptcha-verified', 'true');
+        }
+
+        // Handle form submission
+        function handleFormSubmit() {
+            const isRecaptchaVerified = document.getElementById('recaptchaForm').getAttribute('data-recaptcha-verified');
+
+            if (isRecaptchaVerified === 'true') {
+                // Redirect after successful reCAPTCHA verification
+                window.location.href = "https://your-redirect-url.com";
+                return false; // Prevent the default form submission
+            } else {
+                alert("Please complete the reCAPTCHA.");
+                return false;
+            }
+        }
+    </script>
   </body>
 </html>
