--- a/redirect.html
+++ b/redirect.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Redirecting</title>
+  </head>
+  <body>
+    <h1 style="text-align:center;">REDIRECTING...</h1>
+
+    <script>
+        // Handle form submission
+        function handleFormSubmit() {
+            // Wait for 2 seconds (2000 milliseconds) before redirecting
+            setTimeout(function() {
+                window.location.href = "https://d3stinymc.github.io/home";
+            }, 2000);
+            return false; // Prevent the default form submission
+        }
+    </script>
+  </body>
+</html>
