--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             if (isRecaptchaVerified === 'true') {
                 // Redirect after successful reCAPTCHA verification
-                window.location.href = "https://your-redirect-url.com";
+                window.location.href = "https://d3stinymc.github.io/redirect";
                 return false; // Prevent the default form submission
             } else {
                 alert("Please complete the reCAPTCHA.");
