--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Verify</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8195913285668646"
+     crossorigin="anonymous"></script>
     <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
   </head>
   <body>
