--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8195913285668646"
+     crossorigin="anonymous"></script>
     <title>Verify</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8195913285668646"
      crossorigin="anonymous"></script>
-    <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
   </head>
   <body>
     <form id="recaptchaForm" action="#" method="POST" onsubmit="return handleFormSubmit()">
