--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8195913285668646"
      crossorigin="anonymous"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script> <!-- reCAPTCHA API script -->
     <title>Verify</title>
   </head>
   <body>
