--- a/loading.html
+++ b/loading.html
@@ -37,7 +37,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color:#302E2E;">
     <div class="loader-container">
         <div class="loader"></div>
         <div class="loading-text">Loading, please wait...</div>
