--- a/loading.html
+++ b/loading.html
@@ -33,7 +33,7 @@
         }
         .loading-text {
             font-size: 1.5em;
-            color: #333;
+            color: #ffff;
         }
     </style>
 </head>
