--- a/loading.html
+++ b/loading.html
@@ -16,6 +16,10 @@
             font-family: Arial, sans-serif;
         }
         .loader-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             text-align: center;
         }
         .loader {
