--- a/loading.html
+++ b/loading.html
@@ -24,7 +24,7 @@
         }
         .loader {
             border: 16px solid #f3f3f3;
-            border-top: 16px solid #3498db;
+            border-top: 16px solid #B5FF77;
             border-radius: 50%;
             width: 120px;
             height: 120px;
