--- a/loading.html
+++ b/loading.html
@@ -40,6 +40,12 @@
             color: #ffff;
         }
     </style>
+    <script>
+        // Redirect after 3 seconds (3000 milliseconds)
+        setTimeout(function(){
+            window.location.href = "https://minecraft.net"; // Replace with your target URL
+        }, 3000);
+    </script>
 </head>
 <body style="background-color:#302E2E;">
     <div class="loader-container">
