--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 
     <div class="thumbnail-box" onclick="window.location.href='https://mediafire.com'">
         <img src="thumbnail_0.png" alt="Big Case" class="thumbnail">
-        <p class="thumbnail-text">BIG CASE</p>
+        <p class="thumbnail-text">BIG CASE: Chapter 1</p>
     </div>
 
 </body>
