--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         }
 
         .thumbnail-box:hover .thumbnail-text {
-            color: #FFD700; /* Change color on hover */
+            color: #a3ff87; /* Change color on hover */
         }
     </style>
     <title>D3stinyMC</title>
