--- a/home.html
+++ b/home.html
@@ -88,9 +88,9 @@
         </div>
 
         <!-- Additional thumbnail-boxes can be added here -->
-        <div class="thumbnail-box" onclick="window.location.href='https://example.com'">
+        <div class="thumbnail-box" onclick="window.location.href='https://totetot.tote.co.jp/not.html'">
             <img src="thumbnail_1.png" alt="Another Case" class="thumbnail">
-            <p class="thumbnail-text">Another Case: Chapter 2</p>
+            <p class="thumbnail-text">Coming Soon...</p>
         </div>
     </div>
 
