--- a/home.html
+++ b/home.html
@@ -89,7 +89,7 @@
 
         <!-- Additional thumbnail-boxes can be added here -->
         <div class="thumbnail-box" onclick="window.location.href='https://totetot.tote.co.jp/not.html'">
-            <img src="thumbnail_1.png" alt="Another Case" class="thumbnail">
+            <img src="thumbnail_1.png" alt="Error" class="thumbnail">
             <p class="thumbnail-text">Coming Soon...</p>
         </div>
     </div>
