--- a/redirect.html
+++ b/redirect.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="robots" content="noindex">
     <title>Redirecting</title>
   </head>
   <body onload="handleFormSubmit()">
