--- a/bugreport.html
+++ b/bugreport.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Report a Bug</title>
+    <title>D3stinyMC | BUG REPORT</title>
     <style>
         body {
             font-family: Arial, sans-serif;
