--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
             }
 
             .thumbnail-box {
-                width: 100%; /* Full width for thumbnail boxes on mobile */
+                width: 95%; /* Full width for thumbnail boxes on mobile */
                 max-width: none; /* Remove max-width constraint */
             }
 
@@ -100,7 +100,7 @@
 
     <div class="thumbnail-container">
         <div class="thumbnail-box" onclick="window.location.href='https://mediafire.com'">
-            <img src="thumbnail_0.png" alt="Big Case" class="thumbnail">
+            <img src="thumbnails/thumbnail_0.png" alt="Big Case" class="thumbnail">
             <p class="thumbnail-text">BIG CASE: Chapter 1</p>
         </div>
 
